# rawviewer

./: .cline_tasks  .gitignore  LICENSE  README.md  README_zh.md  pubspec.yaml
.github/workflows/: build_and_release.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  wrapper.cpp
android/app/src/main/kotlin/com/example/rawviewer/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: lru_cache.dart  main.dart  native_lib.dart  settings_page.dart  worker_service.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
macos/native_lib/: build_native_lib.sh  wrapper.cpp
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/native_lib/: CMakeLists.txt  wrapper.cpp
windows/native_lib/libraw/libraw/: libraw_const.h
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  main.cpp
